Add missing components docs pages and templates

--- a/content/docs/components/avatar.mdx
+++ b/content/docs/components/avatar.mdx
@@ -57,9 +57,7 @@ export default AvatarTemplate;
   code={`import { Avatar } from "@foundation-ui/components";
 
 export function AvatarComponent() {
-    return (
-      <Avatar>UI</Avatar>
-    );
+    return <Avatar />;
 }
 `} />
 
