--- a/content/docs/components/badge.mdx
+++ b/content/docs/components/badge.mdx
@@ -72,7 +72,7 @@ export default BadgeTemplate;
 
 export function BadgeComponent() {
     return (
-      <Badge>@foundation-ui</Badge>
+      <Badge />
     );
 }
 `} />
