--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -65,7 +65,7 @@ export default ButtonTemplate;
 
 export function ButtonComponent() {
     return (
-      <Button>@foundation-ui</Button>
+      <Button />
     );
 }
 `} />
