--- a/content/docs/components/overlay.mdx
+++ b/content/docs/components/overlay.mdx
@@ -14,7 +14,7 @@ const [show, setShow] = React.useState<boolean>(false);
     return (
         <div className="grid g-medium-30 p-t-large-30 p-x-medium-60 align-center justify-center">
             <Button variant="border" sizing="large" onClick={() => setShow(true)}>
-                Open overlay
+                @foundation-ui
             </Button>
             <Overlay
                 visible={show}
