--- a/content/docs/components/tooltip.mdx
+++ b/content/docs/components/tooltip.mdx
@@ -3,6 +3,69 @@ title: Tooltip
 description: Tooltips are used to convey additional information while hovering a component.
 ---
 
+<DocsSection>
+
+<DocsPreview language="tsx" component={<TooltipTemplate />} code={`import React from "react";
+import { Tooltip } from "@foundation-ui/components";
+
+function TooltipTemplate() {
+
+    return (
+        <div className="grid g-medium-30 p-t-large-30 p-x-medium-60">
+
+        </div>
+    );
+
+}
+
+export default TooltipTemplate;
+`} />
+
+</DocsSection>
+
+<DocsSection>
+
+### Anatomy
+
+<DocsTextBlock className="m-b-medium-60">
+  The Tooltip component **_is not_** built using the [Compound
+  pattern](https://www.patterns.dev/react/compound-pattern/), it carries all the
+  properties required to make to component work as intended.
+</DocsTextBlock>
+
+<DocsCodePreview
+  language="tsx"
+  code={`import { Tooltip } from "@foundation-ui/components";
+
+export function TooltipComponent() {
+    return (
+      <Tooltip />
+    );
+}
+`} />
+
+</DocsSection>
+
+### API Reference
+
+<DocsSection className="m-y-large-10">
+
+<DocsPropsTable
+  properties={[
+    {
+      name: "children",
+      type: "ReactNode",
+      required: true,
+    },
+    {
+      name: "content",
+      type: "string",
+      required: true,
+    },
+  ]}
+/>
+</DocsSection>
+
 <DocsFooter
   prev="/docs/components/toolbar"
   next="/docs/components-hooks/usage"
