Add API Reference docs page

--- a/content/docs/components/installation.mdx
+++ b/content/docs/components/installation.mdx
@@ -14,4 +14,7 @@ description: Install and setup @founfation-ui/components in your project.
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/components`} />
 </DocsSection>
 
-<DocsFooter prev="/docs/getting-started" next="/docs/components/accordion" />
+<DocsFooter
+  prev="/docs/getting-started"
+  next="/docs/components/api-reference"
+/>
