--- a/content/docs/components-hooks/use-accordion.mdx
+++ b/content/docs/components-hooks/use-accordion.mdx
@@ -3,6 +3,54 @@ title: useAccordion
 description: Import and use the Accordion component's Hooks in your project.
 ---
 
+<DocsCodePreview
+  language="tsx"
+  code={`import { useAccordion } from "@foundation-ui/components";
+
+export function HookComponent() {
+    const accordion = useAccordion();
+    const { id, states, methods } = accordion;
+
+    const { value } = states;
+    const { applyValue, getAccordionId } = methods;
+
+    return ( {/** Your code here **/} );
+
+}
+`} />
+
+<DocsSection className="m-y-large-10">
+### API Reference
+
+<DocsTextBlock>
+  <p>The properties and functions returned by the useAccordion hook.</p>
+</DocsTextBlock>
+
+</DocsSection>
+
+<DocsPropsTable
+  properties={[
+    {
+      name: "id",
+      type: "string",
+      defaultValue: "React.useId",
+    },
+    {
+      name: "value",
+      type: "string | null",
+      defaultValue: "null",
+    },
+    {
+      name: "applyValue",
+      type: "(value: string): => string | void",
+    },
+    {
+      name: "getAccordionId",
+      type: "({ value, type }: Record<string, string>) => string",
+    },
+  ]}
+/>
+
 <DocsFooter
   prev="/docs/components-hooks/usage"
   next="/docs/components-hooks/use-checkbox"
