--- a/content/docs/tokens/installation.mdx
+++ b/content/docs/tokens/installation.mdx
@@ -14,4 +14,7 @@ description: Install and setup @founfation-ui/tokens in your project.
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/tokens`} />
 </DocsSection>
 
-<DocsFooter prev="/docs/components-hooks/usage" next="/docs/tokens/libraries" />
+<DocsFooter
+  prev="/docs/components-hooks/usage"
+  next="/docs/tokens/api-reference"
+/>
