Review tokens and component-hooks docs

--- a/content/docs/tokens/libraries.mdx
+++ b/content/docs/tokens/libraries.mdx
@@ -1788,4 +1788,4 @@ description: Use @founfation-ui/tokens default libraries in your project.
 
 </DocsSection>
 
-<DocsFooter prev="/docs/tokens/api-reference" next="/docs/color-mode/usage" />
+<DocsFooter prev="/docs/tokens/usage" next="/docs/color-mode/usage" />
