--- a/content/docs/components-hooks/usage.mdx
+++ b/content/docs/components-hooks/usage.mdx
@@ -14,6 +14,41 @@ description: Import and use Component Hooks in your project.
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/components`} />
 </DocsSection>
 
+<DocsSection>
+### Setup
+
+<DocsTextBlock className="m-b-medium-60">
+  `@foundation-ui/components` are built using the [React Context
+  API](https://react.dev/reference/react/useContext). When using Component
+  Hooks, you need to wrap you component in a `ContextProvider` in order to
+  access the states and methods exposed by the Component API.
+</DocsTextBlock>
+
+<DocsCodePreview
+  language="tsx"
+  code={`import { Dialog, useDialog } from "@foundation-ui/components";
+
+    function Provider() {
+        return (
+          <Dialog.Root>
+            <Component />
+          </Dialog.Root>
+        );
+
+    }
+
+    function Component() {
+        const dialog = useDialog();
+        const { states, methods } = dialog;
+
+        return ( {/** Your code here **/} );
+
+    }
+
+`} />
+
+</DocsSection>
+
 <DocsFooter
   prev="/docs/components/installation"
   next="/docs/components-hooks/api-reference"
